Go Base image test

--- a/rpi-go1_7_3/Dockerfile
+++ b/rpi-go1_7_3/Dockerfile
@@ -1,5 +1,6 @@
 # This needs to be changed 
-FROM resin/rpi-raspbian:wheezy
+FROM hypriot/rpi-node
+#FROM resin/rpi-raspbian:wheezy
 MAINTAINER Chris Guest <chris.guest@magentys.io>
 
 RUN apt-get update
