--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,8 @@ services:
     grafana:
         container_name: grafana
         hostname: grafana
-        image: fg2it/grafana-armhf:v3.1.1
+        image: chrisguest/grafana-armhf:v3.1.1
+        #image: fg2it/grafana-armhf:v3.1.1
         #image: grafana/grafana:3.1.1
         #image: grafana/grafana:latest
         ports:
@@ -16,7 +17,8 @@ services:
     influxdb:
         container_name: influxdb
         hostname: influxdb
-        image: fgabriel/rpi-influxdb
+        image: chrisguest/rpi-influxdb
+        #image: fgabriel/rpi-influxdb
         ports:
             - "8083:8083"
             - "8086:8086"
